--- a/kvm/centos-ks.cfg
+++ b/kvm/centos-ks.cfg
@@ -63,4 +63,25 @@ rsync
 yum-utils
 elfutils-libelf-devel
 network-scripts
+-avahi
+-bluez-utils
+-dogtail
 %end
+
+%post
+chkconfig acpid off
+chkconfig auditd off
+chkconfig blk-availability off
+chkconfig bluetooth off
+chkconfig certmonger off
+chkconfig cpuspeed off
+chkconfig cups off
+chkconfig haldaemon off
+chkconfig ip6tables off
+chkconfig lvm2-monitor off
+chkconfig messagebus off
+chkconfig mdmonitor off
+chkconfig rpcbind off
+chkconfig rpcgssd off
+chkconfig rpcidmapd off
+chkconfig yum-updateonboot off
