Update pre-commit configuration

--- a/pre-commit/pre-commit-config.yaml
+++ b/pre-commit/pre-commit-config.yaml
@@ -23,6 +23,10 @@ repos:
         exclude: CHANGELOG.md
       - id: forbid-new-submodules
       - id: no-commit-to-branch
+        args: [
+           '--branch', 'main'
+           '--branch', 'dev'
+        ]
       - id: check-yaml
       - id: check-json
       - id: check-xml
